--- a/app/views/userList.scala.html
+++ b/app/views/userList.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: Page[Person], currentOrderBy: Int, currentFilter: String)(implicit rq: security.CtxRqst[_], flash: play.api.mvc.Flash)
+@(dao: MiscController, currentPage: Page[Person], currentOrderBy: Int, currentFilter: String)(implicit rq: security.CtxRqst[_], flash: play.api.mvc.Flash)
 
 @import helper._
 
@@ -75,7 +75,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 
                 <td><a href="@routes.MiscController.userEdit(u.id)">@u.portalLogin</a></td>
 
-                <td>@Role.findById(u.roleId).getOrElse(Role(0,"",0)).name</td>
+                <td>@dao.rlFindById(u.roleId).getOrElse(Role(0,"",0)).name</td>
                 </a>
             </tr>
             }
@@ -84,7 +84,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
             </tbody>
         </table>
 
-        @if(currentPage.total >= User.pageLength ) {
+        @if(currentPage.total >= dao.prPageLength ) {
             <div id="pagination" class="pagination">
                 <ul>
                     @currentPage.prev.map { page =>
