--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -22,15 +22,14 @@
                     <legend></legend>
 
                     @* If the user has no filter on their rights in the user area show them the company list. *@
-                    @* otherwise their company_id is added in the controller  *@
+                    @* otherwise use the company associated with this person (the one doing the editing) *@
                     <div class="control-group">
                      @if(rq.isFiltered(security.tgUser)) {
-                        @* the company id is set in the controller but on an add the form needs something or it gives an error *@
-                        <input name="companyId" type="hidden" value="@form("companyId").value.getOrElse(0).toString" />
+                        <input name="companyId" type="hidden" value="@rq.context.user.get.companyId.getOrElse(0).toString" />
                      } else {
                             <label class="control-label" for="companyId">@Messages("workouts.location.field.company")</label>
                             <div class="controls">
-                                <select name="companyId" value="@form("companyId").value" class="span4">
+                                <select id="companyId" name="companyId" value="@form("companyId").value" class="span4">
                                     <option value="">@Messages("workouts.location.field.company.options")</option>
                                     @dao.coReportCompanyOptions.map { opt =>
                                     <option value="@opt._1" @if(opt._1 == form("companyId").value.getOrElse(0).toString){selected="yes"}>@opt._2</option>
@@ -96,22 +95,14 @@
                         </div>
                     </div>
 
-
-                    @* TODO: Remove these test statements...
-                    userRole = @rq.context.user.get.roleId
-                    GroupList = @dao.rlGroupList(1).toString
-                    userGroupList = @dao.rlGroupList(rq.context.user.get.roleId).toString
-                    form Role = @form("roleId").value.getOrElse(0)
-                    *@
-
                     @* This will only be shown to users who have Create rights here  *@
                     <div class="control-group">
                         @if(!rq.canCreate(security.tgUser)) {
-                            <input name="roleId" type="hidden" value="@form("roleId").value.getOrElse(0).toString" />
+                            <input name="roleId" type="hidden" value="@rq.context.user.get.roleId.toString" />
                         }  else {
                             <label class="control-label" for="roleId">@Messages("useredit.role")</label>
                             <div class="controls">
-                                <select name="roleId" value="@form("roleId").value" class="span3">
+                                <select id="roleId" name="roleId" value="@form("roleId").value" class="span3">
                                 @dao.rlGroupList(rq.context.user.get.roleId).map { role =>
                                 <option value="@role.id.toString" @if(role.id.toString == form("roleId").value.getOrElse(0).toString){selected="yes"}>@role.name</option>
                                 }
