--- a/app/views/beginConnection.scala.html
+++ b/app/views/beginConnection.scala.html
@@ -6,8 +6,8 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript">
         /*
-        * For testing outside of QT
-        */
+         * For testing outside of QT
+         */
         if (typeof(npfunctions) == 'undefined') {
             npfunctions = {};
         }
@@ -42,6 +42,23 @@
             };
         };
 
+        function createCookie(name,value,days,path,domain) {
+            var expires = "";
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime()+(days*24*60*60*1000));
+                expires = "; expires="+date.toGMTString();
+            }
+            if (path)
+                path = "; path=" + path;
+            else 
+                path = "";
+            if (domain)
+                domain = "; domain=" + domain;
+            else domain = "";
+            document.cookie = name+"="+value+expires+path+domain;
+        };
+        
         /* AUTHORIZATION: -------------------------------- */
         // Authorization sub-routine to regain js control.
         var auth = {
@@ -50,8 +67,8 @@
        	    provider : 'facebook',
        	    params : {
        	    	authFlow : 'redirect',
-       	    	lang : 'en',
-       	    	cid : 'login'
+//       	    	lang : 'en',
+       	    	cid : 'addConnection'
        	    },
        	    
        	    getParams : function() {
@@ -59,16 +76,17 @@
        	    		provider : this.provider,
        	    		redirectURL : loc.protocol + '://' + loc.hostname
        	    	        + (parseInt(loc.port) > 0 ? ':' + loc.port : '')
-       	    	        + loc.path.replace('beginLogin', 'endGigya')
+       	    	        + loc.path.replace('beginConnection', 'endGigya')
        	    	        + '?provider=' + this.provider,
        	    	    authFlow : this.params.authFlow,
        	    	    context : this.params.context,
-       	    	    lang : this.params.lang,
-       	    	    cid : this
+//       	    	    lang : this.params.lang,
+       	    	    cid : this.params.cid
        	    	};
        	    }
         
         }
+
         // Authorization routine constructor.
         function authorize(provider) { // Used in Login & Registration.
             var auth = this;
@@ -93,11 +111,12 @@
                 redirectURL: redirectURL + '?provider=' + auth.provider,
                 authFlow:'redirect',
                 context: auth,
-                lang: lang 
+//                lang: lang 
             };
             return(auth);
         };
 
+/*
         //Authorization sub-routine for addConnection.
         //Override if different from default
         authorize.prototype.addConnection = function() {
@@ -114,7 +133,7 @@
             });
             return(auth);
         };
-
+ */
         /* END AUTHORIZATION: General ----------------------------- */
     </script>
 
@@ -124,16 +143,37 @@
             auth.params.provider = loc.params.provider;
         }
         if (loc.params.skin) {
-        	auth.params.cid = 'login.' + loc.params.skin;
+        	auth.params.cid = 'addConnection.' + loc.params.skin;
         }
         if (loc.params.lang) {
         	auth.params.lang = loc.params.lang;
         }
 
-       function onGigyaServiceReady(serviceName) {
-           console.log(auth.getParams());
-    	   gigya.socialize.addConnection(auth.getParams());
+        function onGigyaServiceReady(serviceName) {
+        	// Call REST API to retrieve cookies, signature, and signatureTimestamp
+            $.getJSON(
+                loc.protocol + '://' + loc.hostname + (parseInt(loc.port) > 0 ? ':' + loc.port : '')
+                    + '/s2/gigyaProxy/notifyLogin?siteUID=' + loc.params.uid,
+                restAPICallback
+    		);
         }
+        
+        function restAPICallback(response) {
+        	console.log(response);
+        	// Set up the Cookies
+        	createCookie(response.cookieName,response.cookieValue,null,response.cookiePath,response.cookieDomain);
+        	
+        	// Execute Javascript API to notifyLogin() and addConnection()
+        	gigya.socialize.notifyLogin({
+        		siteUID : response.UID,
+        		UIDTimestamp : response.signatureTimestamp,
+        		UIDSig : response.UIDSignature,
+        		callback : function(response) {
+                    console.log(response);
+                    gigya.socialize.addConnection(auth.getParams());
+         		} 
+         	});
+       }
 
         $(document).ready(function() {
             if (typeof(npfunctions.remove_file) == 'function') {
@@ -145,8 +185,22 @@
             // Load the Gigya API with global config
             var s = document.createElement('script');
             s.type = 'text/javascript';
-            s.src = 'https://cdns.gigya.com/js/socialize.js?apiKey=' + auth.APIKey + '&lang=' + auth.params.lang;
-            s.text = '{ lang : "' + auth.params.lang + '"}';
+            var lang = auth.params.lang;
+            // Convert Gigya language values to 3rd-party supported values
+            switch (auth.params.lang) {
+            case 'en':
+                lang = 'en-US';
+                break;
+            case 'ja':
+            	lang = 'ja-JP';
+            	break;
+            }
+            s.src = 'https://cdns.gigya.com/js/socialize.js?apiKey=' + auth.APIKey + '&lang=' + lang;
+            var globalConf = {
+            	lang : auth.params.lang,
+//            	connectWithoutLoginBehavior : "loginExistingUser"
+            }
+            s.text = JSON.stringify(globalConf);
             document.getElementsByTagName('head')[0].appendChild(s);
         });
     </script>
